--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <script
+  async
+  src="https://unpkg.com/pwacompat"
+  crossorigin="anonymous"></script>
     <title>Employee Directory</title>
   </head>
   <body>
