--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <script
-  async
-  src="https://unpkg.com/pwacompat"
-  crossorigin="anonymous"></script>
+    <meta name="theme-color" content="#F0F1FA" />
+    <meta
+      name="description"
+      content="This employee directory app was created using create-react-app."
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Employee Directory</title>
   </head>
   <body>
