--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#F0F1FA" />
     <meta
       name="description"
-      content="This employee directory app was created using create-react-app."
+      content="This employee directory app was created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
